--- a/package.json
+++ b/package.json
@@ -25,15 +25,13 @@
     "emailjs": "^4.0.3",
     "gsap": "^3.12.7",
     "locomotive-scroll": "^4.1.4",
-    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "lucide-react": "^0.473.0",
-    "next": "15.1.5",
+    "next": "16.1.1",
     "nodemailer": "^7.0.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-lottie": "^1.2.10",
-    "react-lottie-player": "^2.1.0",
     "sass": "^1.83.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
