--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
     "emailjs": "^4.0.3",
+    "framer-motion": "^12.23.26",
     "gsap": "^3.12.7",
     "locomotive-scroll": "^4.1.4",
     "lottie-web": "^5.12.2",
