--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@tabler/icons-react": "^3.28.1",
     "@types/nodemailer": "^7.0.4",
+    "@types/three": "^0.182.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
@@ -35,7 +36,8 @@
     "react-icons": "^5.4.0",
     "sass": "^1.83.4",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/locomotive-scroll": "^4.1.4",
